# openapi.yaml
@@ -91,6 +91,75 @@ paths:
                     description: Unauthorized access due to missing or invalid apiKey
                 '500':
                     description: Internal server error
+    /sports/events:
+        get:
+            operationId: getEventOdds
+            summary: Returns odds for a single game.
+            description: >-
+                Returns odds for a single game. Accepts any available betting markets using the markets parameter. 
+                Coverage of non-featured markets is currently limited to selected bookmakers and sports, and expanding over time.
+                Game identifier (eventId) is acquired from the /sports/odds endpoint.
+            parameters:
+              - in: query
+                name: sport
+                required: true
+                schema:
+                    type: string
+                description: The sport key obtained from calling the /sports endpoint. 'upcoming' is always valid.
+                example: 'americanfootball_nfl' # Single example for path parameter
+              - in: query
+                name: regions
+                required: true
+                schema:
+                    type: string
+                description: >-
+                    Bookmaker regions, comma delimited. Valid regions: us, us2, uk, au, eu.
+                example: 'us,uk' # Single example for query parameter
+              - in: query
+                name: eventId
+                required: true
+                schema:
+                    type: string
+                description: >-
+                    Event ids can be found in the "id" field in the response of the main odds endpoint (see /sports/odds).
+                     If the event has expired (not receiving updates due to completion or cancellation), a HTTP 404 status code will be returned.
+                example: 50f069186530f68051f2a978745931b5
+              - in: query
+                name: markets
+                schema:
+                    type: string
+                description: >-
+                    Types of odds market, comma delimited. Defaults to h2h. Valid values: h2h, spreads, totals, outrights.
+              - in: query
+                name: dateFormat
+                schema:
+                    type: string
+                    enum: [unix, iso]
+                description: Format of timestamps in the response. Defaults to iso.
+              - in: query
+                name: oddsFormat
+                schema:
+                    type: string
+                    enum: [decimal, american]
+                description: Format of odds in the response. Defaults to decimal.
+              - in: query
+                name: bookmakers
+                schema:
+                    type: string
+                description: Comma-separated list of bookmakers to be returned.
+            responses:
+                '200':
+                    description: Successful response with odds data
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/GamesArray'
+                '400':
+                    description: Bad request due to invalid parameters
+                '401':
+                    description: Unauthorized access due to missing or invalid apiKey
+                '500':
+                    description: Internal server error
     /sports/scores:
         get:
             operationId: getScores
